@@ -28,6 +28,7 @@
  * fix protocol versioning (CASSANDRA-2818, 2860)
  * support spaces in path to log4j configuration (CASSANDRA-2383)
  * avoid including inferred types in CF update (CASSANDRA-2809)
+ * fix JMX bulkload call (CASSANDRA-2908)
 
 
 0.8.1
